refactor and global error handling
