# src/routes/api.ts
@@ -45,6 +45,40 @@ router.post('/auth/activation', authController.activation
         }
     */
 );
+router.put(
+    "/auth/update-profile",
+    [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+    authController.updateProfile
+    /*
+        #swagger.tags = ['Auth']
+        #swagger.security = [{
+        "bearerAuth": {}
+        }]
+        #swagger.requestBody = {
+        required: true,
+        schema: {
+            $ref: "#/components/schemas/UpdateProfileRequest"
+        }
+        }
+    */
+);
+router.put(
+    "/auth/update-password",
+    [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+    authController.updatePassword
+    /*
+        #swagger.tags = ['Auth']
+        #swagger.security = [{
+        "bearerAuth": {}
+        }]
+        #swagger.requestBody = {
+        required: true,
+        schema: {
+            $ref: "#/components/schemas/UpdatePasswordRequest"
+        }
+        }
+    */
+);
 
 router.post(
     "/orders",
